# material-components-flutter-experimental

./: .travis.yml  AUTHORS  README.md  pubspec.yaml  travis_script.sh
adaptive_experimental/: .firebaserc  .metadata  pubspec.yaml
adaptive_navigation_scaffold/: README.md  pubspec.yaml
adaptive_starter/: README.md
advanced/: .metadata  README.md  pubspec.yaml
basil/: pubspec.yaml
crane_proto/: .metadata  README.md  pubspec.yaml
cross_platform/: README.md  pubspec.yaml
embedded_fab/: bottom_items.dart  colors.dart  content.dart  main.dart  painters.dart  shape_type.dart
flutteriodemo/: .metadata
fragment_shader_helper/: .flutter-plugins-dependencies  BUILD  README.md  WORKSPACE  helper.bzl  pubspec.yaml
fragment_shader_manager/: .flutter-plugins-dependencies  BUILD.bazel  README.md  WORKSPACE.bazel  helper.bzl  pubspec.yaml
fragment_shader_manager/lib/: fragment_shader_manager.tmpl  generator.dart  ink_sparkle.g.dart  test.g.dart  test.glsl  test.spv
fragment_shader_manager/lib/src/: spv_to_helper.dart
fragment_shader_manager/shaders/: ink_sparkle.glsl
fragment_shader_manager/test/: test.glsl
gallery/: pubspec.yaml
google_fonts/: .travis.yml  CHANGELOG.md  LICENSE  README.md  google_fonts.g.dart  pubspec.yaml  travis_script.sh
io_2019_demos/: pubspec.yaml
lib/: app.dart  colors.dart  formatters.dart  home.dart  login.dart  models.dart
mdc_100_series/: pubspec.yaml
rally_proto/: .metadata  README.md
shader_experiment/: .metadata  README.md  out  pubspec.yaml
shrine_with_cart/: .metadata  README.md  pubspec.yaml
(+336 files in other folders)
